--- a/Project3/public_html/css/style.css
+++ b/Project3/public_html/css/style.css
@@ -30,7 +30,7 @@ body {
     padding: 50px;
     border-radius: 0;
     margin-bottom: 50px;
-    
+
 }
 .thumbnail img {
     margin-top: 10px;
@@ -41,11 +41,11 @@ body {
 
 /* This stylizes your "Poster X of Y" text */
 .imageInfo {
-	color: #959595;
-	font-style: italic;
-	font-size: x-small;
-	float: right;
-	padding-right: 5px;
+    color: #959595;
+    font-style: italic;
+    font-size: x-small;
+    float: right;
+    padding-right: 5px;
 }
 
 /* This stylizes your Title and Rating Text */
@@ -70,10 +70,13 @@ body {
     font-size: 18px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
     font-weight: 200;
-    height: 80px;
+    width: 100px;
+    height: 100px;
+    -moz-border-radius: 50px;
+    -webkit-border-radius: 50px;
+    border-radius: 50px;
     line-height: 80px;
     text-align: center;
-    width: 80px;
     position: absolute;
     top: 50px;
     right: 25px;
@@ -115,7 +118,7 @@ body {
 
 /* This makes sure your Github Button text is small */
 #github{
-	font-size: small;
+    font-size: small;
 }
 
 /* ADD YOUR LIKE AND DISLIKE HOVER/MOUSEOVER CSS CODE HERE */
