--- a/Project3/public_html/css/style.css
+++ b/Project3/public_html/css/style.css
@@ -1,7 +1,7 @@
 /* This stylizes the page defaults */
 html,
 body {
-    margin: 0;
+    margin: 0 auto;
     padding: 0;
     width: 100%;
     overflow: auto;
